--- a/app/src/main/res/layout/activity_start_session.xml
+++ b/app/src/main/res/layout/activity_start_session.xml
@@ -6,68 +6,74 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="es.correointeligente.cipostal.cimobile.Activities.StartSessionActivity">
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_gradient"
-        android:orientation="vertical"
-        android:padding="16dp"
-        android:weightSum="1">
+        android:fillViewport="true"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView3"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="171dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            android:layout_height="match_parent"
+            android:background="@drawable/background_gradient"
+            android:orientation="vertical"
+            android:padding="16dp"
+            android:weightSum="1">
 
-        <EditText
-            android:id="@+id/edt_startSession_usuario"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:background="@drawable/edit_text_shape"
-            android:hint="@string/usuario"
-            android:inputType="textPersonName"
-            android:maxLines="1"
-            android:padding="8dp"
-            android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="match_parent"
+                android:layout_height="171dp"
+                app:srcCompat="@mipmap/ic_launcher" />
 
-        <EditText
-            android:id="@+id/edt_startSession_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/edit_text_shape"
-            android:hint="@string/password"
-            android:inputType="textPassword"
-            android:maxLines="1"
-            android:padding="8dp"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/edt_startSession_usuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="@string/usuario"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/button_iniciar_sesion"
-            android:layout_width="151dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center_vertical"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/button_selector"
-            android:text="@string/iniciar_sesion"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF" />
+            <EditText
+                android:id="@+id/edt_startSession_password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/edit_text_shape"
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:padding="8dp"
+                android:textStyle="bold" />
 
-        <android.support.v4.widget.Space
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
+            <Button
+                android:id="@+id/button_iniciar_sesion"
+                android:layout_width="151dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/button_selector"
+                android:text="@string/iniciar_sesion"
+                android:textAllCaps="false"
+                android:textColor="#FFFFFF" />
 
-        <TextView
-            android:id="@+id/edt_startSession_version_value"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="250dp"
-            android:textStyle="italic" />
+            <android.support.v4.widget.Space
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
 
+            <TextView
+                android:id="@+id/edt_startSession_version_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="250dp"
+                android:textStyle="italic" />
+
+        </LinearLayout>
+     </ScrollView>
     </LinearLayout>
-</LinearLayout>
