--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -2,4 +2,6 @@
 <paths>
     <external-path path="Android/data/com.your.package/" name="files_root" />
     <external-path path="." name="external_storage_root" />
+    <external-path name="my_images" path="Android/data/com.example.package.name/files/Pictures" />
 </paths>
+
