--- a/app/src/main/res/drawable/button_no_entregado.xml
+++ b/app/src/main/res/drawable/button_no_entregado.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorBotonNoEntregadoPressed" android:state_selected="true"></item>
-    <item android:drawable="@color/colorBotonNoEntregadoPressed" android:state_pressed="true"></item>
-    <item android:drawable="@color/colorBotonNoEntregado"></item>
+    <item android:state_selected="true" android:drawable="@color/colorBotonNoEntregadoPressed" />
+    <item android:state_pressed="true" android:drawable="@color/colorBotonNoEntregadoPressed" />
+    <item android:drawable="@color/colorBotonNoEntregado" />
 </selector>
