--- a/app/src/main/res/layout/activity_nueva_notificacion.xml
+++ b/app/src/main/res/layout/activity_nueva_notificacion.xml
@@ -25,16 +25,16 @@
 
             <ImageButton
                 android:id="@+id/imageButton_nueva_noti"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="right|center_vertical"
+                android:layout_width="44dp"
+                android:layout_height="44dp"
+                android:layout_gravity="end|center_vertical"
                 android:layout_marginEnd="10dp"
                 android:layout_marginRight="10dp"
                 android:background="@android:drawable/ic_menu_camera" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="228dp"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:weightSum="1">
@@ -183,7 +183,7 @@
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
-                android:layout_height="17dp" />
+                android:layout_height="wrap_content" />
 
             <LinearLayout
                 android:id="@+id/linearLayout_nueva_notificacion_botonera"
