--- a/app/src/main/res/layout/activity_nueva_notificacion.xml
+++ b/app/src/main/res/layout/activity_nueva_notificacion.xml
@@ -34,18 +34,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="228dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:padding="16dp"
                 android:weightSum="1">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/detalle_notificacion"
-                    android:textAllCaps="true"
-                    android:textStyle="bold"
-                    android:layout_weight="0.31" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -150,83 +142,79 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:visibility="visible"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
+                android:visibility="visible"
                 android:weightSum="1">
-
-                <TextView
-                    android:text="@string/observaciones"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textStyle="bold"
-                    android:textAllCaps="true"/>
 
                 <EditText
                     android:id="@+id/editText_nuevaNotificacion_observaciones"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@drawable/edit_text_shape"
                     android:gravity="top|left"
+                    android:hint="@string/hint_observaciones"
                     android:inputType="textMultiLine"
+                    android:lines="3"
                     android:overScrollMode="always"
+                    android:padding="3dp"
+                    android:scrollHorizontally="false"
                     android:scrollbarStyle="insideInset"
                     android:scrollbars="vertical"
-                    android:lines="3"
-                    android:padding="3dp"
-                    android:background="@drawable/edit_text_shape"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:scrollHorizontally="false"
-                    android:hint="@string/hint_observaciones"/>
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
 
 
             </LinearLayout>
 
             <android.support.v4.widget.Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="12dp" />
 
             <LinearLayout
                 android:id="@+id/linearLayout_nueva_notificacion_botonera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
-                android:layout_marginBottom="10dp"
                 android:weightSum="1">
 
                 <Button
                     android:id="@+id/button_nueva_notificacion_noEntregado"
                     android:layout_width="0dp"
-                    android:layout_weight="0.5"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/button_no_entregado"
-                    android:text="@string/no_entregado"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="0.5"
+                    android:background="@color/colorBoton"
+                    android:text="@string/todos"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"/>
+                    android:textColorLink="@drawable/button_selector"
+                    android:textSize="24sp" />
 
                 <Button
                     android:id="@+id/button_nueva_notificacion_entregado"
                     android:layout_width="0dp"
-                    android:layout_weight="0.5"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="0.5"
                     android:background="@drawable/button_entregado"
-                    android:text="@string/entregado"
+                    android:text="@string/entregado_firma"
                     android:textAllCaps="false"
                     android:textColor="#FFFFFF"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp" />
+                    android:textSize="18sp" />
 
 
             </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearLayout_detalle_primer_intento"
-                android:layout_width="match_parent"
-                android:layout_height="81dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
@@ -234,15 +222,16 @@
 
                 <TextView
                     android:id="@+id/textView"
-                    android:layout_width="wrap_content"
+                    android:layout_width="351dp"
                     android:layout_height="wrap_content"
                     android:text="@string/detalle_primer_intento"
+                    android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="45dp"
                     android:background="@drawable/fieldset_shape"
                     android:orientation="vertical"
                     android:padding="5dp">
