--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorBoton">#00B0CA</color>
+    <color name="colorBoton">#00b0ca</color>
     <color name="colorGrisSuave">#E6E6E6</color>
     <color name="colorBotonEntregado">#19E300</color>
     <color name="colorBotonEntregadoPressed">#238F16</color>
