--- a/app/src/main/res/layout/activity_nueva_notificacion.xml
+++ b/app/src/main/res/layout/activity_nueva_notificacion.xml
@@ -23,15 +23,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <ImageButton
-                android:id="@+id/imageButton_nueva_noti"
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:layout_gravity="end|center_vertical"
-                android:layout_marginEnd="10dp"
-                android:layout_marginRight="10dp"
-                android:background="@android:drawable/ic_menu_camera" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -150,7 +141,7 @@
                 <EditText
                     android:id="@+id/editText_nuevaNotificacion_observaciones"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="86dp"
                     android:background="@drawable/edit_text_shape"
                     android:gravity="top|left"
                     android:hint="@string/hint_observaciones"
@@ -218,7 +209,8 @@
                 android:orientation="vertical"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:paddingTop="10dp">
+                android:paddingTop="10dp"
+                android:weightSum="1">
 
                 <TextView
                     android:id="@+id/textView"
@@ -231,7 +223,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="45dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/fieldset_shape"
                     android:orientation="vertical"
                     android:padding="5dp">
