--- a/app/src/main/res/layout/datos_resultado_no_entregado.xml
+++ b/app/src/main/res/layout/datos_resultado_no_entregado.xml
@@ -102,7 +102,17 @@
 
             </TableLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/foto_acuse_detalle"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"/>
 
+            <ImageView
+                android:id="@+id/imageView_result_entregado_foto_acuse"
+                android:layout_width="match_parent"
+                android:layout_height="275dp"/>
 
             <TextView
                 android:layout_width="match_parent"
