--- a/app/src/main/res/layout/activity_foto_acuse.xml
+++ b/app/src/main/res/layout/activity_foto_acuse.xml
@@ -13,32 +13,23 @@
         layout="@layout/tool_bar" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="374dp"
+        android:gravity="center_vertical"
         android:orientation="vertical"
         android:padding="16dp"
         android:weightSum="1">
 
-        <Button
+        <ImageButton
             android:id="@+id/button_foto_acuse_hacer_foto"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="352dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorBotonEntregadoPressed"
-            android:elevation="0dp"
-            android:fontFamily="sans-serif"
-            android:lineSpacingExtra="12sp"
-            android:text="@string/foto_acuse"
-            android:textAllCaps="true"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="@color/cardview_dark_background"
-            android:textColorLink="@color/colorBackgroundAusente"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:typeface="normal" />
+            android:layout_width="230dp"
+            android:layout_height="208dp"
+            android:layout_gravity="center|center_vertical"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@android:drawable/ic_menu_camera"
+            android:scaleType="fitCenter" />
+
 
     </LinearLayout>
 
