--- a/app/src/main/res/menu/menu_borrar_notificacion.xml
+++ b/app/src/main/res/menu/menu_borrar_notificacion.xml
@@ -2,9 +2,20 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/imageButton_listaNotificaciones_foto"
+        android:layout_width="53dp"
+        android:layout_height="48dp"
+        android:layout_gravity="right|center_vertical"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:icon="@android:drawable/ic_menu_camera"
+        android:title="Camara"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/menu_borrar_notificaciones"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/filtro"
-        app:showAsAction="always" />
+        app:showAsAction="always"/>
+
 
 </menu>
